--- a/puppyswipe-backend/package.json
+++ b/puppyswipe-backend/package.json
@@ -11,6 +11,7 @@
   "author": "Group 2!",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^7.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
