--- a/puppyswipe-frontend/package.json
+++ b/puppyswipe-frontend/package.json
@@ -9,14 +9,16 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
+    "concurrently": "^7.1.0",
     "cors": "^2.8.5",
+    "mdbreact": "^5.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "react-tinder-card": "^1.3.1"
   },
   "scripts": {
-    "start": "react-scripts start",  
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
