honestly dont know

--- a/package.json
+++ b/package.json
@@ -1,21 +1,1 @@
-
-{"name": "puppyswipe-backend",
-"version": "1.0.0",
-"description": "",
-"main": "server.js",
-"type": "module",
-"scripts": {
-  "start": "concurrently \"nodemon puppyswipe-backend/server.js\" \"npm run server\"",
-  "server": "npm start --prefix puppyswipe-frontend"
-
-},
-"author": "Group 2!",
-"license": "ISC",
-"dependencies": {
-  "concurrently": "^7.1.0",
-  "cors": "^2.8.5",
-  "dotenv": "^8.2.0",
-  "express": "^4.17.1",
-  "mongoose": "^5.10.11"
-}
-}
+{"name":"puppyswipe-backend","version":"1.0.0","description":"","main":"server.js","type":"module","scripts":{"start":"concurrently \"nodemon puppyswipe-backend/server.js\" \"npm run server\"","server":"npm start --prefix puppyswipe-frontend"},"author":"Group 2!","license":"ISC","dependencies":{"concurrently":"^7.1.0","cors":"^2.8.5","dotenv":"^8.2.0","express":"^4.17.1","heroku":"^7.60.2","mongoose":"^5.10.11"}}
